--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@ Would you like me to make it sound more formal, friendly, or premium/luxury?</P>
             <hr><br>
             <h3>Book Now:</h3>
             <form action="">
-                <label for="name">Enter your name: </label><input type="text" id="name"> <br> <br>
-                <label for="email">Enter your email: </label><input type="email" id="email"> <br> <br>
-                <label for="no.">Enter your no. </label><input type="Numebr" id="no."> <br> <br>
+                <label for="name">Enter your name: </label><input type="text" id="name" required > <br> <br>
+                <label for="email">Enter your email: </label><input type="email" id="email" required> <br> <br>
+                <label for="no.">Enter your no. </label><input type="Numebr" id="no." required> <br> <br>
                 <button>submit</button>
             </form>
         </div>
@@ -75,4 +75,5 @@ Would you like me to make it sound more formal, friendly, or premium/luxury?</P>
         </footer>
 
 </body>
+
 </html>
