--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ Would you like me to make it sound more formal, friendly, or premium/luxury?</P>
             <form action="">
                 <label for="name">Enter your name: </label><input type="text" id="name" required > <br> <br>
                 <label for="email">Enter your email: </label><input type="email" id="email" required> <br> <br>
-                <label for="no.">Enter your no. </label><input type="Numebr" id="no." required> <br> <br>
+                <label for="no.">Enter your no. </label><input type="Number" id="no." required> <br> <br>
                 <button>submit</button>
             </form>
         </div>
@@ -77,3 +77,4 @@ Would you like me to make it sound more formal, friendly, or premium/luxury?</P>
 </body>
 
 </html>
+
